<resources>
    <string name="app_name">SpeedQuizz</string>
    <string name="main_titre">SpeedQuizz</string>
    <string name="main_indice_layoutJ1">Nom Joueur 1</string>
    <string name="main_indice_layoutJ2">Nom Joueur 2</string>
    <string name="main_bt_start">Commencer</string>
    <string name="ScoreJ1">0</string>
    <string name="ScoreJ2">0</string>
    <string name="timer">Partez !!!</string>
    <string name="fin">Terminé !!</string>
    <string name="victoire">Victoire</string>
    <string name="défaite">Défaite</string>
    <string name="égalité">Egalité</string>
</resources>