<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginVertical="@dimen/main_margesVerticales_titre">

        <TextView
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_titre"
            android:layout_margin="@dimen/app_marge"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="30sp"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/main_J1_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_marges_layout"
            android:textColor="@color/black"
            android:hint="@string/main_indice_layoutJ1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/main_J1_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20sp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:background="@color/background_layout"
            />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/main_J2_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_marges_layout"
            android:textColor="@color/black"
            android:hint="@string/main_indice_layoutJ2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/main_J2_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20sp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:background="@color/background_layout"
            />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/main_start_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_bt_start"
            android:layout_alignParentEnd="true"
            android:textColor="@color/black"
            android:layout_margin ="@dimen/main_marge_bt"
        />
    </RelativeLayout>
</LinearLayout>