<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"

    android:screenOrientation="landscape"
    tools:context=".activity_game">

    <!--Bouton de résultat du joueur 2-->
    <Button
        android:id="@+id/bt_reponseJ1"
        style="@style/style_bouton"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:padding="@dimen/game_marge_boutton"
        android:layout_margin="@dimen/main_marge_bt"
        android:text="@string/joy"/>

    <!--Nom du joueur 2-->
    <TextView
        android:id="@+id/PseudoJ2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_indice_layoutJ2"
        android:layout_above="@id/bt_reponseJ2"
        android:layout_alignParentStart="true"
        android:layout_margin="15dp"/>

    <!--question du joueur 2-->
    <TextView
        android:id="@+id/questionJ1"
        android:maxLines="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/bt_reponseJ2"
        android:layout_alignParentBottom="true"
        android:layout_margin="50dp"
        android:textSize="20sp"
        android:text="@string/question1"/>

    <!--Score du joueur 2-->
    <TextView
        android:id="@+id/scoreJ1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="50dp"
        android:textSize="50sp"
        android:text="@string/ScoreJ1"/>

    <TextView
        android:id="@+id/timerJ2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="75dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="75dp"
        android:text="@string/timer"
        android:textColor="@color/RougeVif"
        android:textSize="40sp" />










    <TextView
        android:id="@+id/timerJ1"
        android:rotation="180"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="75dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="75dp"
        android:text="@string/timer"
        android:textColor="@color/RougeVif"
        android:textSize="40sp" />




    <!--Score du joueur 1-->
    <TextView
        android:id="@+id/scoreJ2"
        android:rotation="180"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="50dp"
        android:textSize="50sp"
        android:text="@string/ScoreJ2"/>


    <!--question du joueur 1-->
    <TextView
        android:id="@+id/questionJ2"
        android:rotation="180"
        android:maxLines="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/bt_reponseJ1"
        android:layout_alignParentTop="true"
        android:layout_margin="50dp"
        android:textSize="20sp"
        android:text="@string/question1"/>

    <!--Nom du joueur 1-->
    <TextView
        android:id="@+id/PseudoJ1"
        android:layout_width="wrap_content"
        android:rotation="180"
        android:layout_height="wrap_content"
        android:text="@string/main_indice_layoutJ1"
        android:layout_below="@id/bt_reponseJ1"
        android:layout_alignParentEnd="true"
        android:layout_margin="15dp"/>

    <!--Bouton de résultat du joueur 1-->
    <Button
        android:id="@+id/bt_reponseJ2"
        style="@style/style_bouton"
        android:text="@string/joy"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/main_marge_bt"
        android:layout_marginTop="@dimen/main_marge_bt"
        android:layout_marginEnd="@dimen/main_marge_bt"
        android:layout_marginBottom="@dimen/main_marge_bt"
        android:padding="@dimen/game_marge_boutton" />


</RelativeLayout>